fixed the stlying of the product index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,13 @@
 
   <body>
 
+  <div class="row">
+    <div class="small-12 column">
+
     <%= yield %>
     <%= javascript_include_tag "application" %>
+  </div>
+</div>
+
   </body>
 </html>
