--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,15 @@
  *= require foundation_and_overrides
 
  */
+
+ .index-product-image {
+ 	border: 1px solid grey;
+ }
+
+ /*.list-actions {
+ 	float: right
+ }*/
+
+ .list-description {
+ 	width: 60%;
+ }
