--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,30 +1,33 @@
 <h1>Listing products</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
+<table>
+ 
   <tbody>
     <% @products.each do |product| %>
+    <div class="row">
       <tr>
-        <td><%= product.title %></td>
-        <td><%= product.description %></td>
-        <td><%= product.image_url %></td>
-        <td><%= product.price %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <div class="small-2 columns">
+            <td><%= image_tag(product.image_url, class: "index-product-image") %></td>
+        </div>
+        <div class="small-8 columns">
+            <td class="list-description"><%= product.title %><br />
+            <%= truncate(strip_tags(product.description), length: 80) %></td>
+        </div>
+        <div class="small-1 columns">
+            <td><%= product.price %></td>
+        </div>
+        <div class="small-1 columns">
+            <td><%= link_to 'Show', product %><br />
+            <%= link_to 'Edit', edit_product_path(product) %><br />
+            <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </div>
       </tr>
+      </div>
     <% end %>
   </tbody>
 </table>
+
 
 <br>
 
