updated seed data so there are three entries

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,12 @@
  	float: right
  }*/
 
+.product-title {
+	font-weight: bold;
+	color: darkorange;
+	font-size: 1.2em;
+}
+
  .list-description {
  	width: 60%;
  }
