--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,3 +33,37 @@
  .list-description {
  	width: 60%;
  }
+
+#banner {
+	background: #9c9;
+	padding: 10px;
+	border-bottom: 2px solid;
+	font: small-caps 40px/40px "Times New Roman", serif;
+	color: #282;
+	text-align: center;
+
+	img {
+		float: left;
+	}
+
+}
+
+#side {
+	float: left;
+	padding: 1em 2em;
+	width: 13em;
+	background: #141;
+	height: 100%;
+
+	ul {
+		padding: 0;
+
+		li {
+			list-style: none;
+			a {
+				color: #bfb;
+				font-size: small;
+			}
+		}
+	}
+}
