--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,20 +4,35 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
-
-    <%= stylesheet_link_tag    "application" %>
-    <%= javascript_include_tag "vendor/modernizr" %>
-    <%= csrf_meta_tags %>
+    <title>Pragprog Books Online Store</title>
+      <%= stylesheet_link_tag "application", media: "all",
+          "data-turbolinks-track" => true %>
+        <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+        <%= csrf_meta_tags %>
   </head>
 
-  <body>
+  <body class="<%= controller.controller_name %>">
+    <div id="banner">
+    <%= image_tag("logo.png") %>
+    <%= @page_title || "Pragmatic Bookshelf" %>
+  </div>
+
+  <div id="side"> 
+    <ul>
+      <li><a href="http://www....">Home</a></li>
+      <li><a href="http://www..../faq">Questions</a></li> <li><a href="http://www..../news">News</a></li> 
+      <li><a href="http://www..../contact">Contact</a></li>
+    </ul> 
+  </div>
+
+
 
   <div class="row">
     <div class="small-12 column">
 
     <%= yield %>
     <%= javascript_include_tag "application" %>
+  
   </div>
 </div>
 
