added test to check that store index page was working and loading fixtures

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,7 +15,7 @@
             <%= truncate(strip_tags(product.description), length: 80) %></td>
         </div>
         <div class="small-1 columns">
-            <td><%= product.price %></td>
+            <td><%= number_to_currency(product.price) %></td>
         </div>
         <div class="small-1 columns">
             <td><%= link_to 'Show', product %><br />
